--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div>
           <img
             class="icon"
-            src="img/me.jpg"
+            src="img/handsome.jpg"
             alt="myIcon"
             width="120"
             height="120"
           />
         </div>
         <div>
-          <h1>なまえ なまえ</h1>
-          <p>なまむぎなまごめなまたまご</p>
+          <h1>安達　疾風</h1>
+          <p>マリエッタの安達</p>
           <ul>
             <li>
               <a href="#">
@@ -48,5 +48,43 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <h1>WORKS</h1>
+        <section class="animate slide-from-left">
+          <img src="img/banner_box.png" alt="はこ" width="400" height="225" />
+          <h2>宝探しゲーム</h2>
+          <p>
+            ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。
+          </p>
+        </section>
+        <section class="animate slide-from-right">
+          <img src="img/banner_card.png" alt="はこ" width="400" height="225" />
+          <h2>card</h2>
+          <p>
+            ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。
+          </p>
+        </section>
+        <section class="animate slide-from-left">
+          <img src="img/banner_card.png" alt="はこ" width="400" height="225" />
+          <h2>card</h2>
+          <p>
+            ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。
+          </p>
+        </section>
+        <section class="animate slide-from-left">
+          <img src="img/banner_card.png" alt="はこ" width="400" height="225" />
+          <h2>card</h2>
+          <p>
+            ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。ゲーム。
+          </p>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <small>(c) adachi hayate</small>
+    </footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
